Bug 94850 - FILESAVE: Icon set Stars not saved as XLSX
Summary: FILESAVE: Icon set Stars not saved as XLSX
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.2.1 rc
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-07 09:21 UTC by Luke
Modified: 2016-10-25 19:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple example with stars (7.91 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-10-07 09:21 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-07 09:21:59 UTC
Created attachment 119382 [details]
Simple example with stars

Steps to reproduce:
1. In Calc, enter a few lines of data on a column
2. Format->Conditional Formatting->Icon Set->Stars
3. Save as XLSX
4. Close
5. Open
While many other icon sets work, the Stars set is lost

Stars is a standard icon set in Excel and this bug can be reproduce by creating a Calc doc or roundtripping an Excel doc.
Comment 1 tommy27 2015-10-07 19:51:30 UTC
tested under Win7x64

I confirm bug in LibO 5.0.2.1 and 5.1.0.0.alpha1+
Build ID: f830600ece806ec365a4839e79afabe183c5e36d
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-06_22:49:09
Locale: it-IT (it_IT)

the stars are correctly shown when you open that .xlsx the first time, but are lost once you edit it, close it and reload it.

I add Calc expert to CC list

@Luke
which LibO version and O/S did you tested this bug?
Comment 2 Commit Notification 2015-10-07 22:45:00 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e6feddc53830406fa04b4a0aea49bb8438dc702

3stars iconset not exported to OOXML, tdf#94850

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Luke 2015-10-08 06:58:47 UTC
Verified Fixed in Version: 5.1.0.0.alpha1+
Build ID: 2e6feddc53830406fa04b4a0aea49bb8438dc702

Thanks moggi!