3stars iconset not exported to OOXML, tdf#94850

Change-Id: I983406a9eae2c975de0bb57894b89819445e8bec
Reviewed-on: https://gerrit.libreoffice.org/19238
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>